<resources>
	<string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover</string>
	<string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u>safety notes&lt;/u>.</string>
	<string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u>back up your wallet&lt;/u>!</string>
	<string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
	<string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
	<string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
	<string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
	<string name="blockchain_state_progress_downloading">Synchronizing with network</string>
	<string name="blockchain_state_progress_stalled">Synchronization stalled</string>
	<string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
	<string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
	<string name="wallet_address_fragment_your">Your Bitcoin Address:</string>
	<string name="rate_abb">RMB/BTC</string>
    <string name="qr_address_your">Your QR code：</string>
    <string name="wallet_address_fragment_clipboard_msg">Bitcoin address copied to clipboard</string>
	<string name="wallet_addresses_fragment_add_dialog_title">Add Bitcoin address</string>
	<string name="wallet_addresses_fragment_add_dialog_message">Bitcoin addresses cannot be deleted. Do you want to add a new address to your wallet?</string>
	<string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
	<string name="exchange_rates_activity_title">Exchange Rates</string>
	<string name="exchange_rates_fragment_empty_text">Could not load exchange rates</string>
	<string name="exchange_rates_fragment_default">(default)</string>
	<string name="exchange_rates_fragment_rate">=</string>
	<string name="exchange_rates_fragment_balance">balance</string>
	<string name="exchange_rates_fragment_source">Price from %s</string>
	<string name="exchange_rates_context_set_as_default_title">Set as default foreign currency</string>
	<string name="wallet_transactions_fragment_tab_received">Received</string>
	<string name="wallet_transactions_fragment_tab_all">Both</string>
	<string name="wallet_transactions_fragment_tab_sent">Sent</string>
	<string name="wallet_transactions_fragment_empty_text_received">No Bitcoins received so far.</string>
	<string name="wallet_transactions_fragment_empty_text_sent">No Bitcoins sent so far.</string>
	<string name="wallet_transactions_fragment_empty_text_howto">How to get Bitcoins?\n\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
	<string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u>backed up your wallet&lt;/u>, to protect against loss?</string>
	<string name="wallet_transactions_fragment_coinbase">mined</string>
	<string name="wallet_transactions_fragment_internal">internal</string>
	<string name="wallet_transactions_context_show_qr_title">Show QR code</string>
	<string name="wallet_options_backup">Back up Keys</string>
	<string name="wallet_options_safety">Safety notes</string>
	<string name="wallet_options_donate">Tip / Donate</string>
	<string name="wallet_donate_address_label">Donation for Bitcoin Wallet</string>
	<string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
	<string name="wallet_low_storage_dialog_msg">Bitcoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Bitcoins will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
	<string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Bitcoins due to this problem.\n\nYou should check and correct your time and timezone settings.</string>
	<string name="wallet_version_dialog_title">A new version is available!</string>
	<string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
	<string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
	<string name="wallet_version_dialog_button_market">Google Play</string>
	<string name="wallet_version_dialog_button_binary">Download</string>
	<string name="wallet_precision_warning_dialog_title">Change of denomination</string>
	<string name="wallet_precision_warning_dialog_msg">Denomination has been changed from bitcoin (BTC) to millibitcoin (mBTC). All amounts are multiplied by a factor of 1000.\n\nYou can revert this change in the settings.</string>
	<string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
	<string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of Bitcoin Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
	<string name="send_coins_activity_title">Send Bitcoins</string>
	<string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
	<string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
	<string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
	<string name="send_coins_fragment_payee_verified_by">verified by: %s</string>
	<string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
	<string name="send_coins_fragment_receiving_address_error">Invalid Bitcoin Address!</string>
	<string name="send_coins_fragment_receiving_address_error_cross_network">Cannot use %s address with this wallet!</string>
	<string name="send_coins_fragment_receiving_address_error_cross_network_unknown">Cannot use address of unknown network with this wallet!</string>
	<string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
	<string name="send_coins_fragment_pending">(BTC %s waiting for confirmation)</string>
	<string name="send_coins_fragment_amount_label">Amount to pay</string>
	<string name="send_coins_fragment_direct_payment_enable">Send payment directly to the payee.</string>
	<string name="send_coins_fragment_direct_payment_ack">Your payment was successfully sent directly.</string>
	<string name="send_coins_fragment_direct_payment_nack">Your payment was rejected via direct connection.</string>
	<string name="send_coins_fragment_direct_payment_failed_title">Direct payment failed</string>
	<string name="send_coins_fragment_direct_payment_failed_msg">Your payment will still be broadcasted via the P2P network.</string>
	<string name="send_coins_fragment_button_send">Send</string>
	<string name="send_coins_fragment_button_back">Back</string>
	<string name="send_coins_fragment_insufficient_money_title">Not enough available coins</string>
	<string name="send_coins_fragment_insufficient_money_msg1">You\'re missing %s.</string>
	<string name="send_coins_fragment_insufficient_money_msg2">Do you want to pay with all you have?</string>
	<string name="send_coins_preparation_msg">Signing…</string>
	<string name="send_coins_sending_msg">Sending…</string>
	<string name="send_coins_sent_msg">Sent!</string>
	<string name="send_coins_failed_msg">Failed!</string>
    <string name="send_coins_success_msg">Send Bitcoin success</string>
    <string name="send_coins_error_msg">Problem sending coins!</string>
	<string name="send_coins_options_empty">Empty wallet</string>
	<string name="send_coins_address_context_clear_title">Enter new address</string>
	<string name="request_coins_activity_title">Request Bitcoins</string>
	<string name="request_coins_fragment_amount_label">Requested amount (optional)</string>
	<string name="request_coins_fragment_accept_bluetooth_payment">Accept payment via Bluetooth for more reliable processing</string>
	<string name="request_coins_fragment_initiate_request_qr">Have this code scanned by the sender.</string>
	<string name="request_coins_fragment_initiate_request_nfc">Or tap an NFC enabled device.</string>
	<string name="request_coins_clipboard_msg">Bitcoin request copied to clipboard</string>
	<string name="request_coins_share_dialog_title">Share request for Bitcoins…</string>
	<string name="request_coins_options_local_app_title">Request from local app</string>
	<string name="address_book_activity_title">Address Book</string>
	<string name="address_book_list_receiving_title">Your addresses</string>
	<string name="address_book_list_sending_title">Sending addresses</string>
	<string name="address_book_empty_text">No entries in address book</string>
	<string name="address_book_context_send_title">Send Bitcoins to address</string>
	<string name="address_book_context_edit_title">Edit address</string>
	<string name="address_book_context_remove_title">Remove address</string>
	<string name="address_book_context_show_qr_title">Show QR code</string>
	<string name="address_book_context_copy_to_clipboard_title">Copy to clipboard</string>
	<string name="address_book_context_default_title">Set as default address</string>
	<string name="address_book_options_paste_from_clipboard_title">Paste from clipboard</string>
	<string name="address_book_options_paste_from_clipboard_empty">Clipboard is empty</string>
	<string name="address_book_options_paste_from_clipboard_invalid">Data from clipboard is unrecognizable</string>
	<string name="address_book_options_scan_title">Scan address</string>
	<string name="address_book_options_scan_invalid">Scanned data is unrecognizable</string>
	<string name="address_book_row_message_compromised_key">This address might be compromised. You should not use it any more for receiving coins.</string>
	<string name="edit_address_book_entry_dialog_title_add">Add address</string>
	<string name="edit_address_book_entry_dialog_title_edit">Edit address</string>
	<string name="edit_address_book_entry_dialog_address_label">Address</string>
	<string name="about_title">About</string>
    <string name="cancel_trade">Cancel</string>
    <string name="confirm_trade">Confirm</string>
    <string name="cash_abb">USD</string>
    <string name="btc_abb">BTC</string>
    <string name="trademode_title">Please Choose Trade Mode</string>
    <string name="trademode_bitcoin_btn">Buy Bitcoins</string>
    <string name="trademode_bill_btn">Exchange Cashes</string>
    <string name="trademode_qr_btn">Scan Cash Withdrawal QR</string>
    <string name="cashtrade_rc_title">支付比特币</string>
    <string name="cashtrade_rc_hint">请使用手机钱包扫描二维码</string>
    <string name="cashtrade_rc_cash_title">兑换现金：</string>
    <string name="cashtrade_rc_btc_title">支付比特币：</string>
    <string name="cashtrade_co_title">交易明细</string>
    <string name="cashtrade_co_hint">请点击“提款”按钮提取现金</string>
    <string name="cashtrade_co_btc_title">卖出比特币：</string>
    <string name="cashtrade_co_cash_title">兑换现金：</string>
    <string name="cashtrade_co_rate_title">交易汇率：</string>
    <string name="cashtrade_co_checkout">提款</string>
    <string name="cashtrade_kycf_title">KYC验证失败</string>
    <string name="cashtrade_kycf_retry_prefix">本日您还有</string>
    <string name="cashtrade_kycf_retry_suffix">次尝试机会</string>
    <string name="cashtrade_kycf_retry">重新登录</string>
    <string name="openscan">开启并扫描</string>
    <string name="connect">连接</string>
</resources>