<?xml version="1.0" encoding="utf-8"?>

<!-- AUTHOR: F, DATE: 2014.5.31 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/cashtrade_checkingout_tradetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textColor="@color/grange"
            android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/cashtrade_checkingout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/cashtrade_co_title"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/cashtrade_checkingout_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/cashtrade_co_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cashtrade_checkingout_btc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashtrade_co_btc_title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/cashtrade_checkingout_btc_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/cashtrade_checkingout_btc_abb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/btc_abb"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cashtrade_checkingout_cash_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashtrade_co_cash_title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/cashtrade_checkingout_cash_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/cashtrade_checkingout_cash_abb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/cash_abb"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cashtrade_checkingout_rate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashtrade_co_rate_title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/cashtrade_checkingout_rate_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/cashtrade_checkingout_rate_abb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/rate_abb"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cashtrade_checkingout_cnl_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_normal3"
            android:gravity="center"
            android:text="@string/cancel_trade"
            android:textColor="@drawable/btn_color"
            android:textSize="@dimen/font_size_small"/>

        <TextView
            android:id="@+id/cashtrade_checkingout_checkout_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="400dp"
            android:background="@drawable/btn_normal3"
            android:gravity="center"
            android:text="@string/cashtrade_co_checkout"
            android:textColor="@drawable/btn_color"
            android:textSize="@dimen/font_size_small"/>
    </LinearLayout>

</LinearLayout>