<?xml version="1.0" encoding="utf-8"?>

<!-- AUTHOR: F, DATE: 2014.6.2 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/cashtrade_kycfailure_tradetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/grange"
            android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/cashtrade_kycfailure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="165dp"
        android:gravity="center"
        android:text="@string/cashtrade_kycf_title"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_large" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >
        
    <TextView
        android:id="@+id/cashtrade_kycfailure_retry_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/cashtrade_kycf_retry_prefix"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_normal" />
    <TextView
        android:id="@+id/cashtrade_kycfailure_retry_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_normal" />
    <TextView
        android:id="@+id/cashtrade_kycfailure_retry_suffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/cashtrade_kycf_retry_suffix"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cashtrade_kycfailure_cnl_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_normal3"
            android:gravity="center"
            android:text="@string/cancel_trade"
            android:textColor="@drawable/btn_color"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:id="@+id/cashtrade_kycfailure_retry_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="350dp"
            android:background="@drawable/btn_normal3"
            android:gravity="center"
            android:text="@string/cashtrade_kycf_retry"
            android:textColor="@drawable/btn_color"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>