<?xml version="1.0" encoding="utf-8"?>

<!-- AUTHOR: F, DATE: 2014.6.2 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/cashtrade_requestcoin_tradetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/grange"
            android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/cashtrade_requestcoin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/cashtrade_rc_title"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_large" />
    
    <LinearLayout
        android:layout_width="720dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="top"
        android:orientation="horizontal" >

       <LinearLayout
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cashtrade_requestcoin_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/cashtrade_rc_hint"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
            
            <LinearLayout
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/cashtrade_requestcoin_btc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cashtrade_rc_btc_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_small" />

                <TextView
                    android:id="@+id/cashtrade_requestcoin_btc_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_small" />

                <TextView
                    android:id="@+id/cashtrade_requestcoin_btc_abb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/btc_abb"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/cashtrade_requestcoin_cash_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cashtrade_rc_cash_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_small" />

                <TextView
                    android:id="@+id/cashtrade_requestcoin_cash_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_small" />

                <TextView
                    android:id="@+id/cashtrade_requestcoin_cash_abb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/cash_abb"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_small" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/cashtrade_requestcoin_qr"
            android:layout_width="@dimen/wallet_address_qr_size_large"
            android:layout_height="@dimen/wallet_address_qr_size_large"
            android:layout_marginLeft="50dp"
            android:background="@drawable/qrcode_frame"
            android:focusable="true"
            android:scaleType="centerInside" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cashtrade_requestcoin_cnl_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_normal3"
            android:gravity="center"
            android:text="@string/cancel_trade"
            android:textColor="@drawable/btn_color"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:id="@+id/cashtrade_requestcoin_cfm_btn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="350dp"
            android:background="@drawable/btn_normal3"
            android:gravity="center"
            android:text="@string/confirm_trade"
            android:textColor="@drawable/btn_color"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>